improved update system, other various touches

--- a/KMPRazorMix/_Layout.cshtml
+++ b/KMPRazorMix/_Layout.cshtml
@@ -3,7 +3,7 @@
 <html>
 <head>
     <link href='http://fonts.googleapis.com/css?family=Exo+2:400,300' rel='stylesheet' type='text/css' />
-    <link href="/content/style.css" rel="stylesheet" type="text/css" />
+    <link href="/content/style.min.css" rel="stylesheet" type="text/css" />
     <title>@Page.Title</title>
     @RenderSection("head", required: false)
 </head>
@@ -17,6 +17,12 @@
         </h2>
         <h2>
             <a href="/Servers">Servers</a>
+        </h2>
+        <h2>
+            <a href="/Readme">Readme</a>
+        </h2>
+        <h2>
+            <a href="/FAQ">FAQ</a>
         </h2>
     </section>
     <section id="content">
