--- a/KMPRazorMix/content/style.css
+++ b/KMPRazorMix/content/style.css
@@ -1,66 +1,58 @@
-﻿body
-{
-    font-family: 'Exo 2', sans-serif;
-    padding: 2em 4em;
-    width: 80%;
+body {
+  font-family: 'Exo 2', sans-serif;
+  padding: 2em 4em;
+  width: 80%;
 }
-
-#header
-{
-    display: inline;
+#header {
+  display: inline;
 }
-
-    #header h1
-    {
-        font-size: xx-large;
-        display: inline;
-    }
-
-    #header h2
-    {
-        display: inline;
-        padding-left: 1em;
-    }
-
-    #header a
-    {
-        color: inherit;
-        text-decoration: none;
-    }
-
-        #header a:visited
-        {
-            color: inherit;
-        }
-
-#footer
-{
-    font-size: smaller;
-    color: grey;
-    font-style: italic;
-    margin-top: 200px;
+#header h1 {
+  font-size: xx-large;
+  display: inline;
 }
-
-#content
-{
+#header h2 {
+  display: inline;
+  padding-left: 1em;
 }
-
-    #content a
-    {
-        color: #1e90ff;
-    }
-
-        #content a:visited
-        {
-            color: #1e90ff;
-        }
-
-#changelog
-{
-    padding-left: 3em;
-    border: 2px solid #000;
-    width: 75%;
+#header a {
+  color: inherit;
+  text-decoration: none;
+}
+#header a:visited {
+  color: inherit;
+}
+#footer {
+  font-size: smaller;
+  color: grey;
+  font-style: italic;
+  margin-top: 200px;
+}
+#content a {
+  color: #1e90ff;
+}
+#content a:visited {
+  color: #1e90ff;
+}
+#changelog {
+  padding-left: 3em;
+  border: 2px solid #000;
+  border-radius: 1em;
+  margin: 2em;
+  width: 75%;
 }
 #downloads {
-    list-style: none;
+  list-style: none;
+}
+#outdatedServer {
+  color: grey;
+}
+#qaList li {
+  list-style: none;
+}
+#qaList li:nth-child(even) {
+  margin-bottom: 1em;
+}
+#qaList li:nth-child(odd) {
+  font-weight: 600;
+  font-size: large;
 }
