it's hard to come up with good commit messages when you change so many things

--- a/KMPRazorMix/Index.cshtml
+++ b/KMPRazorMix/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using KMPRazorMix
+@{
     Page.Title = "Kerbal Multi Player";
     Layout = "/_Layout.cshtml";
 }
@@ -15,5 +16,8 @@
 </p>
 <p>
     KMP is currently in active development and help is always welcome. Have a look at the <a href="https://github.com/TehGimp/KerbalMultiPlayer">github page</a> if you're interested.
-        Developers, server operators, bug testers and all others are always welcome to contribute or provide feedback.
+    Developers, server operators, bug testers and all others are always welcome to contribute or provide feedback.
+</p>
+<p>
+    @KMP.ChangelogSummary
 </p>
