--- a/KMPRazorMix/content/style.css
+++ b/KMPRazorMix/content/style.css
@@ -56,3 +56,10 @@ body {
   font-weight: 600;
   font-size: large;
 }
+#servers td {
+  padding-right: 2em;
+}
+#servers tr:first-child {
+  font-size: large;
+  font-weight: 600;
+}
