--- a/KMPRazorMix/content/style.less
+++ b/KMPRazorMix/content/style.less
@@ -63,8 +63,8 @@ body
 {
     padding-left: 3em;
     border: 2px solid #000;
-    border-radius:1em;
-    margin:2em;
+    border-radius: 1em;
+    margin: 2em;
     width: 75%;
 }
 
@@ -94,3 +94,14 @@ body
         font-weight: 600;
         font-size: large;
     }
+
+#servers td
+{
+    padding-right:2em;
+}
+
+#servers tr:first-child  
+{
+        font-size: large;
+        font-weight: 600;
+}
