--- a/KMPRazorMix/content/style.css
+++ b/KMPRazorMix/content/style.css
@@ -1,7 +1,15 @@
 body {
   font-family: 'Exo 2', sans-serif;
-  padding: 2em 4em;
-  width: 80%;
+  width: 70%;
+  margin: 0 auto;
+}
+::-moz-selection {
+  background-color: bisque;
+  color: #000;
+}
+::selection {
+  background-color: bisque;
+  color: #000;
 }
 #header {
   display: inline;
@@ -25,7 +33,7 @@ body {
   font-size: smaller;
   color: grey;
   font-style: italic;
-  margin-top: 200px;
+  padding-top: 2em;
 }
 #content a {
   color: #1e90ff;
@@ -62,4 +70,10 @@ body {
 #servers tr:first-child {
   font-size: large;
   font-weight: 600;
+}
+#centralColumn {
+  background-color: azure;
+  padding: 2em 1em;
+  height: auto !important;
+  margin-bottom: 3em;
 }
