--- a/KMPRazorMix/content/style.less
+++ b/KMPRazorMix/content/style.less
@@ -4,8 +4,16 @@
 body
 {
     font-family: 'Exo 2', sans-serif;
-    padding: 2em 4em;
-    width: 80%;
+    width: 70%;
+    margin:0 auto;
+}
+::-moz-selection {
+       background-color:bisque;
+       color: #000;
+}
+::selection {
+       background-color:bisque;
+       color: #000;
 }
 
 #header
@@ -41,7 +49,7 @@ body
     font-size: smaller;
     color: grey;
     font-style: italic;
-    margin-top: 200px;
+    padding-top:2em;
 }
 
 #content
@@ -104,4 +112,11 @@ body
 {
     font-size: large;
     font-weight: 600;
+}
+
+#centralColumn{
+    background-color:azure;
+    padding:2em 1em;
+    height:auto !important;
+    margin-bottom:3em;
 }
