some table pretty stuff

--- a/KMPRazorMix/content/style.less
+++ b/KMPRazorMix/content/style.less
@@ -105,17 +105,17 @@ body
 
 #servers td
 {
-    padding-right: 2em;
+    padding-right: 4em;
 }
 
-#servers tr:first-child
+#servers thead
 {
     font-size: large;
     font-weight: 600;
+    cursor:pointer;
 }
 
 #centralColumn{
-    background-color:azure;
     padding:2em 1em;
     height:auto !important;
     margin-bottom:3em;
