--- a/KMPRazorMix/Servers.cshtml
+++ b/KMPRazorMix/Servers.cshtml
@@ -4,40 +4,55 @@
     Layout = "~/_Layout.cshtml";
 }
 
+@section head
+{
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+    <script src="/content/jquery.tablesorter.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#servers").tablesorter();
+        });
+    </script>
+}
+
 <p>This is a list of community servers. If you've got a stable server that you plan to continuing running, ask around on the #KMP irc channel on esper.net</p>
 
-<table id="servers">
-    <tr>
-        <td>Name</td>
-        <td>Address</td>
-        <td>Players</td>
-        <td>Version</td>
-    </tr>
-    @{
-        foreach (var s in KMP.Servers.Where(s => s.IsOnline))
-        {
-            if (s.Version == KMP.KMPVersion)
+<table id="servers" class="tablesorter">
+    <thead>
+        <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Players</th>
+            <th>Version</th>
+        </tr>
+    </thead>
+    <tbody>
+        @{
+            foreach (var s in KMP.Servers.Where(s => s.IsOnline))
             {
-                string output = "<tr>";
-                output += string.Format("<td>{0}</td>", s.Information);
-                output += string.Format("<td>{0}</td>", s.Address);
-                output += string.Format("<td>{0}/{1}</td>", s.Players, s.MaxPlayers);
-                output += string.Format("<td>{0}</td>", s.Version);
-                output += string.Format("<td><a href=\"Server?server={0}\">Info</a></td>", s.Address);
-                output += "</tr>";
-                WriteLiteral(output);
-            }
-            else
-            {
-                string output = "<tr id=\"outdatedServer\">";
-                output += string.Format("<td>{0}</td>", s.Information);
-                output += string.Format("<td>{0}</td>", s.Address);
-                output += string.Format("<td>{0}/{1}</td>", s.Players, s.MaxPlayers);
-                output += string.Format("<td>{0}</td>", s.Version);
-                output += string.Format("<td><a href=\"Server?server={0}\">Info</a></td>", s.Address);
-                output += "</tr>";
-                WriteLiteral(output);
+                if (s.Version == KMP.KMPVersion)
+                {
+                    string output = "<tr>";
+                    output += string.Format("<td>{0}</td>", s.Information);
+                    output += string.Format("<td>{0}</td>", s.Address);
+                    output += string.Format("<td>{0}/{1}</td>", s.Players, s.MaxPlayers);
+                    output += string.Format("<td>{0}</td>", s.Version);
+                    output += string.Format("<td><a href=\"Server?server={0}\">Info</a></td>", s.Address);
+                    output += "</tr>";
+                    WriteLiteral(output);
+                }
+                else
+                {
+                    string output = "<tr id=\"outdatedServer\">";
+                    output += string.Format("<td>{0}</td>", s.Information);
+                    output += string.Format("<td>{0}</td>", s.Address);
+                    output += string.Format("<td>{0}/{1}</td>", s.Players, s.MaxPlayers);
+                    output += string.Format("<td>{0}</td>", s.Version);
+                    output += string.Format("<td><a href=\"Server?server={0}\">Info</a></td>", s.Address);
+                    output += "</tr>";
+                    WriteLiteral(output);
+                }
             }
         }
-    }
+    </tbody>
 </table>
