--- a/KMPRazorMix/Servers.cshtml
+++ b/KMPRazorMix/Servers.cshtml
@@ -15,7 +15,7 @@
     </script>
 }
 
-<p>This is a list of community servers. If you've got a stable server that you plan to continuing running, ask around on the #KMP irc channel on esper.net</p>
+<p>This is a list of community servers. If you've got a stable server that you would like to put on this list, ask around on the #KMP irc channel on esper.net</p>
 
 <table id="servers" class="tablesorter">
     <thead>
