various changes + replace $ with : in the server listing

--- a/KMPRazorMix/Downloads.cshtml
+++ b/KMPRazorMix/Downloads.cshtml
@@ -15,8 +15,9 @@
     </li>
 </ul>
 <p>
-    Older downloads can be found [here?]
+    Development builds can be downloaded from <a href="http://chrisand.no-ip.info:82/kmp/">godarklight's development build server</a>.
 </p>
-<div id="changelog">
+<fieldset id="changelog">
+    <legend>Version @KMP.KMPVersion Changelog</legend>
     @{ WriteLiteral(KMP.Changelog); }
-</div>
+</fieldset>
