--- a/KMPRazorMix/Servers.cshtml
+++ b/KMPRazorMix/Servers.cshtml
@@ -19,12 +19,10 @@
 
 <table id="servers" class="tablesorter">
     <thead>
-        <tr>
-            <th>Name</th>
-            <th>Address</th>
-            <th>Players</th>
-            <th>Version</th>
-        </tr>
+            <td>Name</td>
+            <td>Address</td>
+            <td>Players</td>
+            <td>Version</td>
     </thead>
     <tbody>
         @{
