--- a/KMPRazorMix/Servers.cshtml
+++ b/KMPRazorMix/Servers.cshtml
@@ -4,25 +4,18 @@
     Layout = "~/_Layout.cshtml";
 }
 
-@section head
-{
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-    <script src="/content/jquery.tablesorter.min.js"></script>
-    <script>
-        $(document).ready(function () {
-            $("#servers").tablesorter();
-        });
-    </script>
-}
+<p>This is a list of community servers.
+    <br />
+    If you've got a stable server that you would like to put on this list, ask around on the #KMP irc channel on esper.net or submit a patch/pull request on the <a href="https://github.com/ruarai/kmpinfo">kmpinfo repo</a>.</p>
 
-<p>This is a list of community servers. If you've got a stable server that you would like to put on this list, ask around on the #KMP irc channel on esper.net</p>
-
-<table id="servers" class="tablesorter">
+<table id="servers">
     <thead>
+        <tr>
             <td>Name</td>
             <td>Address</td>
             <td>Players</td>
             <td>Version</td>
+        </tr>
     </thead>
     <tbody>
         @{
