--- a/KMPRazorMix/content/style.less
+++ b/KMPRazorMix/content/style.less
@@ -86,7 +86,10 @@ body
     color: grey;
 }
 
-
+#qaList {
+    margin-top:1em;
+    padding:0;
+}
 #qaList li
 {
     list-style: none;
@@ -112,9 +115,7 @@ body
 {
     font-size: large;
     font-weight: 600;
-    cursor:pointer;
 }
-
 #centralColumn{
     padding:2em 1em;
     height:auto !important;
