--- a/KMPRazorMix/Downloads.cshtml
+++ b/KMPRazorMix/Downloads.cshtml
@@ -5,13 +5,21 @@
 }
 
 <p>
-    KMP release builds can be downloaded from spaceport. 
+    KMP releases can be downloaded from spaceport. 
 </p>
 <ul id="downloads">
-    <li>KMP <a href="@KMP.ClientDownload">Client</a> Version @KMP.KMPVersion for KSP @KMP.KSPCompatibleVersion
+    <li>
+        <a href="@KMP.ClientDownload">
+            <img src="/content/kmpclient.png" /><br/>
+            KMP Client Version @KMP.KMPVersion for KSP version @KMP.KSPCompatibleVersion
+        </a>
     </li>
 
-    <li>KMP <a href="@KMP.ServerDownload">Server</a> Version @KMP.KMPVersion
+    <li>
+        <a href="@KMP.ServerDownload">
+            <img src="/content/kmpserver.png" /><br/>
+            KMP Server Version @KMP.KMPVersion
+        </a>
     </li>
 </ul>
 <p>
