--- a/KMPRazorMix/content/style.css
+++ b/KMPRazorMix/content/style.css
@@ -33,7 +33,7 @@ body {
   font-size: smaller;
   color: grey;
   font-style: italic;
-  padding-top: 2em;
+  padding-top: 4em;
 }
 #content a {
   color: #1e90ff;
@@ -50,6 +50,16 @@ body {
 }
 #downloads {
   list-style: none;
+  margin-top: 2em;
+  margin-bottom: 3em;
+  height: 128px;
+}
+#downloads li {
+  float: left;
+  width: 50%;
+}
+#downloads img {
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 #outdatedServer {
   color: grey;
