improved error pages

--- a/KMPRazorMix/Error.cshtml
+++ b/KMPRazorMix/Error.cshtml
@@ -13,13 +13,13 @@
                 break;
             case "403":
             case "401":
-    <p>You didn't have sufficient authorization to view that page.</p>
+    <p>You don't have sufficient authorization to view that page.</p>
                 break;
             case "500":
     <p>An internal server error occured.</p>
                 break;
             default:
-    <p>But no more information could be found.</p>
+    <p>No more information could be found.</p>
                 break;
         }
     }
