--- a/KMPRazorMix/Downloads.cshtml
+++ b/KMPRazorMix/Downloads.cshtml
@@ -5,7 +5,8 @@
 }
 
 <p>
-    KMP releases can be downloaded from spaceport. 
+    KMP releases can be downloaded from spaceport. <br />
+    @KMP.ChangelogSummary
 </p>
 <ul id="downloads">
     <li>
