some style stuff

--- a/KMPRazorMix/_Layout.cshtml
+++ b/KMPRazorMix/_Layout.cshtml
@@ -3,6 +3,7 @@
 <html>
 <head>
     <link href='http://fonts.googleapis.com/css?family=Exo+2:400,300' rel='stylesheet' type='text/css' />
+    <link href='http://fonts.googleapis.com/css?family=Lato:300' rel='stylesheet' type='text/css' />
     <link href="/content/style.min.css" rel="stylesheet" type="text/css" />
     <link rel="icon" type="image/png" href="/content/favicon.ico">
     <title>@Page.Title</title>
