--- a/KMPRazorMix/Index.cshtml
+++ b/KMPRazorMix/Index.cshtml
@@ -12,7 +12,7 @@
     No joke. It's a real multiplayer plugin and it even actually works (er... mostly). 
         KMP builds on the already-amazing KerbalLiveFeed mod created by Alfred Lam/SodiumEyes, and KMP itself was created by me: Shaun Esau/TehGimp.
         KMP would not have been possible without the help of testers like Simon C. (CaptainCarpenter), nor without the numerous discoveries made and shared by KSP's incredibly smart & helpful modding community.
-        A full list of contributors is available <a href="http://sesau.ca/ksp/KMP_contribs.html">here</a>.
+        A <a href="http://sesau.ca/ksp/KMP_contribs.html">full list of contributors</a> is available.
 </p>
 <p>
     KMP is currently in active development and help is always welcome. Have a look at the <a href="https://github.com/TehGimp/KerbalMultiPlayer">github page</a> if you're interested.
