more styling with the download images

--- a/KMPRazorMix/Downloads.cshtml
+++ b/KMPRazorMix/Downloads.cshtml
@@ -18,7 +18,7 @@
 
     <li>
         <a href="@KMP.ServerDownload">
-            <img src="/content/kmpserver.png" /><br/>
+            <img src="/content/kmpserver.png" class="floatRight" /><br/>
             KMP Server Version @KMP.KMPVersion
         </a>
     </li>
