--- a/KMPRazorMix/content/style.less
+++ b/KMPRazorMix/content/style.less
@@ -149,3 +149,10 @@ body
     height: auto !important;
     margin-bottom: 3em;
 }
+
+.floatRight{
+    float:right;
+}
+.floatLeft{
+    float:left;
+}
