Revert "more styling with the download images"
This reverts commit 5b0020192ffd660f173950e0145d6a72759933c8.

--- a/KMPRazorMix/Downloads.cshtml
+++ b/KMPRazorMix/Downloads.cshtml
@@ -18,7 +18,7 @@
 
     <li>
         <a href="@KMP.ServerDownload">
-            <img src="/content/kmpserver.png" class="floatRight" /><br/>
+            <img src="/content/kmpserver.png" /><br/>
             KMP Server Version @KMP.KMPVersion
         </a>
     </li>
