--- a/KMPRazorMix/content/style.less
+++ b/KMPRazorMix/content/style.less
@@ -6,7 +6,7 @@
 
 body
 {
-    font-family:@contentFont;
+    font-family: @contentFont;
     width: 70%;
     margin: 0 auto;
 }
@@ -30,16 +30,13 @@ body
 
     #header h1
     {
-        font-family: @headingFont;
-        font-size: xx-large;
         display: inline;
     }
 
     #header h2
     {
-        font-family: @headingFont;
-        display: inline;
         padding-left: 1em;
+        display:inline;
     }
 
     #header a
@@ -101,7 +98,7 @@ body
 
     #downloads img
     {
-        box-shadow:@shadow;
+        box-shadow: @shadow;
     }
 
 #outdatedServer
@@ -148,4 +145,9 @@ body
     padding: 2em 1em;
     height: auto !important;
     margin-bottom: 3em;
+}
+
+h1, h2, h3, h4, h5, h6
+{
+    font-family: @headingFont;
 }
