--- a/KMPRazorMix/_Layout.cshtml
+++ b/KMPRazorMix/_Layout.cshtml
@@ -8,6 +8,17 @@
     <link rel="icon" type="image/png" href="/content/favicon.ico">
     <title>@Page.Title</title>
     @RenderSection("head", required: false)
+    <script>
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+
+        ga('create', 'UA-46896943-1', 'apphb.com');
+        ga('send', 'pageview');
+    </script>
 </head>
 <body>
     <section id="centralColumn">
