image heights and widths

--- a/KMPRazorMix/Downloads.cshtml
+++ b/KMPRazorMix/Downloads.cshtml
@@ -11,14 +11,14 @@
 <ul id="downloads">
     <li>
         <a href="@KMP.ClientDownload">
-            <img src="/content/kmpclient.png" /><br/>
+            <img height="128" width="400" src="/content/kmpclient.png" /><br/>
             KMP Client Version @KMP.KMPVersion for KSP version @KMP.KSPCompatibleVersion
         </a>
     </li>
 
     <li>
         <a href="@KMP.ServerDownload">
-            <img src="/content/kmpserver.png" /><br/>
+            <img height="128" width="400" src="/content/kmpserver.png" /><br/>
             KMP Server Version @KMP.KMPVersion
         </a>
     </li>
