--- a/KMPRazorMix/_Layout.cshtml
+++ b/KMPRazorMix/_Layout.cshtml
@@ -35,7 +35,7 @@
                 <a href="/FAQ">FAQ</a>
             </h2>
             <h2>
-                <a href="http://www.github.com/TehGimp/KerbalMultiPlayer">Source</a>
+                <a href="http://www.github.com/TehGimp/KerbalMultiPlayer">Source <img src="/content/github.png" width="24" height="24"/></a>
             </h2>
         </header>
 
