--- a/KMPRazorMix/content/style.css
+++ b/KMPRazorMix/content/style.css
@@ -3,6 +3,11 @@ body {
   width: 70%;
   margin: 0 auto;
 }
+@media screen and (max-width: 900px) {
+  body {
+    width: 100%;
+  }
+}
 ::-moz-selection {
   background-color: bisque;
   color: #000;
@@ -28,6 +33,10 @@ body {
 }
 #header a:visited {
   color: inherit;
+}
+#header img {
+  top: 4px;
+  position: relative;
 }
 #footer {
   font-size: smaller;
@@ -80,6 +89,11 @@ body {
 #servers td {
   padding-right: 1em;
   padding-bottom: 0.15em;
+}
+@media screen and (max-width: 900px) {
+  #servers td {
+    padding-bottom: 1em;
+  }
 }
 #servers thead {
   font-size: large;
