error message if no servers

--- a/KMPRazorMix/Servers.cshtml
+++ b/KMPRazorMix/Servers.cshtml
@@ -11,7 +11,8 @@
 
 </p>
 
-
+@if (KMP.Servers.Count > 0)
+{ 
 <table id="servers">
     <thead>
         <tr>
@@ -23,17 +24,22 @@
     </thead>
     <tbody>
         @{
-            foreach (var s in KMP.Servers.Where(s => s.IsOnline))
-            {
-            <tr class="@(KMP.KMPVersion == s.Version ? "" : "outdatedServer" )" >
-                <td>@s.Name</td>
-                <td>@s.Address</td>
-                <td>@s.Players/@s.MaxPlayers</td>
-                <td>@s.Version</td>
-                <td><img src="/content/flags/@{ WriteLiteral(s.Country); }.png"/> @s.Region</td>
-                <td><a href="/Server?server=@s.Address">Info</a></td>
-            </tr>
-            }
+    foreach (var s in KMP.Servers.Where(s => s.IsOnline))
+    {
+                <tr class="@(KMP.KMPVersion == s.Version ? "" : "outdatedServer")" >
+                    <td>@s.Name</td>
+                    <td>@s.Address</td>
+                    <td>@s.Players/@s.MaxPlayers</td>
+                    <td>@s.Version</td>
+                    <td><img src="/content/flags/@{ WriteLiteral(s.Country); }.png"/> @s.Region</td>
+                    <td><a href="/Server?server=@s.Address">Info</a></td>
+                </tr>
+    }
         }
     </tbody>
 </table>
+}
+else
+{
+    <b>Uh oh! Looks like no servers are currently available. This might mean that all servers are down - but it's more likely that you'll just have to refresh this page.</b>
+}
