--- a/KMPRazorMix/content/style.css
+++ b/KMPRazorMix/content/style.css
@@ -43,6 +43,9 @@ body {
   color: grey;
   padding-top: 4em;
 }
+#content {
+  overflow: hidden;
+}
 #content a {
   color: #1e90ff;
 }
@@ -106,4 +109,25 @@ body {
 }
 #map {
   height: 60vh;
+}
+#leftColumn {
+  float: left;
+  width: 50%;
+}
+#rightColumn {
+  float: right;
+  height: 50%;
+  padding-top: 1em;
+}
+#serverInfo {
+  padding-top: 1em;
+}
+input {
+  border: 1px solid #d1c7ac;
+  padding: 3px;
+  margin-bottom: 1em;
+  width: 450px;
+  height: 25px;
+  font-size: 1.05em;
+  font-family: "Lato", "Helvetica Neue", Helvetica, sans-serif;
 }
