--- a/KMPRazorMix/content/style.less
+++ b/KMPRazorMix/content/style.less
@@ -73,6 +73,7 @@ body
 
 #content
 {
+    overflow: hidden;
 }
 
     #content a
@@ -172,4 +173,33 @@ body
 #map
 {
     height: 60vh;
+}
+
+#leftColumn
+{
+    float: left;
+    width: 50%;
+}
+
+#rightColumn
+{
+    float: right;
+    height: 50%;
+    padding-top:1em;
+}
+
+#serverInfo
+{
+    padding-top: 1em;
+}
+
+input
+{
+    border: 1px solid #d1c7ac;
+    padding: 3px;
+    margin-bottom:1em;
+    width:450px;
+    height:25px;
+    font-size:1.05em;
+    font-family:@contentFont;
 }
