--- a/KMPRazorMix/_Layout.cshtml
+++ b/KMPRazorMix/_Layout.cshtml
@@ -44,7 +44,8 @@
         </section>
 
         <footer id="footer">
-            Page generated at @DateTime.Now.ToString("hh:mm tt"), KMP information last updated at @KMP.LastUpdate.ToString("hh:mm tt")@{Write(KMP.CurrentlyUpdating ? ", Information is currently updating." : "."); }
+            Page generated at @DateTime.Now.ToString("hh:mm tt"), KMP information last updated at @KMP.LastUpdate.ToString("hh:mm tt")@{Write(KMP.CurrentlyUpdating ? ", Information is currently updating." : "."); } <br/>
+            @KMP.DebugString
         </footer>
     </section>
 </body>
